# USB_Telegraph

./: BOTTOM COVER.stl  README.md  TOP.stl
FW_keyboard/: platformio.ini
FW_keyboard - Copy/: log  platformio.ini
FW_keyboard - Copy/src/: main.cpp
FW_keyboard/src/: main.cpp
FW_serial/src/: main.cpp
HW/: .gitignore  USB_Telegraph.kicad_pcb  USB_Telegraph.kicad_pro  USB_Telegraph.kicad_sch
HW/Fab_outputs/: USB_Telegraph-B_Cu.gbr  USB_Telegraph-B_Mask.gbr  USB_Telegraph-B_Paste.gbr  USB_Telegraph-B_Silkscreen.gbr  USB_Telegraph-Edge_Cuts.gbr  USB_Telegraph-F_Cu.gbr  USB_Telegraph-F_Mask.gbr  USB_Telegraph-F_Paste.gbr  USB_Telegraph-F_Silkscreen.gbr  USB_Telegraph-NPTH.drl  USB_Telegraph-PTH.drl  USB_Telegraph-job.gbrjob
HW/assy_output/: USB_Telegraph-bottom.pos  USB_Telegraph-top.pos
SW/: .gitignore  CMakeLists.txt  temp
SW/src/: Client.cpp  Server.cpp
